<resources>
    <string name="app_name">捷運美食App</string>
    <string name="title_home">探索美食</string>
    <string name="title_dashboard">探索</string>
    <string name="title_member">個人中心</string>
    <string name="home_login">透過E-mail登入</string>
    <string name="home_register">註冊新帳號</string>
    <string name="email_account">電子郵件帳號</string>
    <string name="password">密碼</string>
    <string name="signUp_button">確認</string>
    <string name="name">暱稱</string>
    <string name="emptyAccount">帳號不可為空!</string>
    <string name="emptyPassword">密碼不可為空!</string>
    <string name="emptyName">暱稱不可為空!</string>
    <string name="register_success">註冊成功</string>
    <string name="login">登入</string>
    <string name="login_success">登入成功</string>
    <string name="logout">登出</string>
    <string name="email_hasSent">The verification Email has been sent!</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="storeName">店名</string>
    <string name="storeAddress">地址</string>
    <string name="storeDescription">簡介</string>
    <string name="addConfirm">確認</string>
    <string name="addStore">新增店家</string>
    <string name="addStore_Success">新增店家成功</string>
    <string name="addStore_Fail">新增失敗!請聯絡管理員</string>
    <string name="title_feed">美食圈</string>
    <string name="title_collection">收藏</string>
    <string name="title_trip">TRIPS</string>
    <string name="add_store">新增店家</string>
    <string name="notifications">推播</string>
    <string name="aboutUs">關於此APP</string>
    <string name="account">電子信箱</string>
    <string name="register">註冊</string>
    <string name="username">帳戶名稱</string>
    <string name="icon_member">會員頭像</string>
    <string name="icon_setting">設定圖標</string>
    <string name="icon_notification">推播圖標</string>
    <string name="icon_description">個人資訊圖標</string>
    <string name="icon_about">關於我們圖標</string>

    <!-- 首頁用到的 -->
    <string name="value_any_city">依捷運站查詢</string>
    <string name="value_any_category">依食物種類查詢</string>
    <string name="sorted_by_price">按照價格搜尋</string>
    <string name="sorted_by_popularity">依人氣搜尋</string>
    <string name="sorted_by_rating">依評分搜尋</string>
    <string name="all_restaurants">所有餐廳</string>
    <string name="header_filters">篩選器</string>
    <string name="value_any_price">任何價格</string>
    <string name="price_1">0~100 元</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$</string>
    <string name="sort_by_rating">依評分排序</string>
    <string name="sort_by_popularity">依人氣排序</string>
    <string name="sort_by_price">依價格排序</string>
    <string name="cancel">取消</string>
    <string name="apply">套用</string>
    <string name="message_no_results">Oops, 找不到任何相關結果</string>
    <string name="divider_bullet">•</string>
    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="add_random_items">隨機加入</string>
    <string name="message_no_network">無網路連線!</string>
    <string name="filter_add_review">分享評論</string>
    <string name="hint_review">您的用餐體驗如何?</string>
    <string name="submit">送出</string>
    <string name="message_no_reviews">成為第一個分享留言的人吧!</string>
    <string name="title_sign_in_error">登入錯誤</string>
    <string name="option_retry">重試</string>
    <string name="option_exit">離開</string>
    <string name="message_unknown">未知錯誤</string>
    <string name="searching">搜尋</string>
    <string name="uploadImage">上傳圖片</string>
    <string name="upload">上傳</string>
    <string name="download_image">下載圖片</string>
    <string name="success">下載成功</string>
    <string name="progress_uploading">上傳中...</string>
    <string name="progress_downloading">正在下載...</string>
    <string name="upload_success">上傳成功</string>
    <string name="upload_failure">上傳失敗!</string>
    <string name="download_button">下載</string>
    <string name="label_link">下載網址</string>
    <string name="download_success">下載成功</string>
    <string name="download_failure">下載失敗</string>
    <string name="log_out">登出</string>
    <string name="sign_in_prompt">登入以繼續</string>
    <string name="sign_in_anonymously">匿名登入</string>
    <string name="take_photo_prompt">上傳圖片</string>
    <string name="camera_button_text">上傳</string>
    <string name="label_download">下載圖片</string>
    <string name="download">下載</string>
    <string name="progress_auth">登入中..</string>
    <string name="home">首頁</string>

    <string name="changeProfilePhoto">更換大頭貼</string>
    <string name="full_name">使用者名稱</string>
    <string name="auth_failed">登入失敗</string>
    <string name="auth_success">登入成功</string>
    <string name="register_failed">註冊失敗</string>

    <!-- fragment names -->
    <string name="profile_fragment">profile</string>
    <string name="edit_profile_fragment">編輯個人資訊</string>
    <string name="sign_out_fragment">登出</string>
    <string name="view_post_fragment">view_post</string>

    <!-- Intent Extras -->

    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="selected_bitmap">selected_bitmap</string>

    <!-- Bundle arg names -->
    <string name="activity_number">activity_number</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="gallery">圖庫</string>
    <string name="photo">相片</string>
    <string name="string_open_camera">照一張相片!</string>
    <string name="string_next">下一步</string>
    <string name="string_share">分享</string>

    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="user_id">user_id</string>
    <string name="Upload_fragment">上傳店家資訊</string>


    <string-array name="cities">

    <item>@string/value_any_city</item>

    <item>---------淡水信義線---------</item>

    <item>淡水站</item>

    <item>紅樹林站</item>

    <item>竹圍站</item>

    <item>關渡站</item>

    <item>忠義站</item>

    <item>復興崗站</item>

    <item>北投站</item>

    <item>新北投站</item>

    <item>奇岩站</item>

    <item>唭哩岸站</item>

    <item>石牌站</item>

    <item>明德站</item>

    <item>芝山站</item>

    <item>士林站</item>

    <item>劍潭站</item>

    <item>圓山站</item>

    <item>民權西路站</item>

    <item>雙連站</item>

    <item>中山站</item>

    <item>台北車站</item>

    <item>台大醫院站</item>

    <item>中正紀念堂站</item>

    <item>東門站</item>

    <item>大安森林公園站</item>

    <item>大安站</item>

    <item>信義安和站</item>

    <item>台北101/世貿站</item>

    <item>象山站</item>

    <item>---------松山新店線---------</item>

    <item>松山</item>

    <item>南京三民</item>

    <item>南京復興</item>

    <item>松江南京</item>

    <item>中山</item>

    <item>北門</item>

    <item>西門</item>

    <item>小南門</item>

    <item>中正紀念堂</item>

    <item>古亭</item>

    <item>台電大樓</item>

    <item>公館</item>

    <item>萬隆</item>

    <item>景美</item>

    <item>大坪林</item>

    <item>七張</item>

    <item>小碧潭站</item>

    <item>新店區公所</item>

    <item>新店</item>

    <item>---------板南線---------</item>

    <item>南港展覽館</item>

    <item>昆陽</item>

    <item>後山碑</item>

    <item>永春</item>

    <item>市政府</item>

    <item>忠孝敦化</item>

    <item>忠孝新生</item>

    <item>善導寺</item>

    <item>台北車站</item>

    <item>台大醫院</item>

    <item>西門</item>

    <item>龍山寺</item>

    <item>江子翠</item>

    <item>新埔</item>

    <item>板橋</item>

    <item>府中</item>

    <item>亞東醫院</item>

    <item>海山</item>

    <item>土城</item>

    <item>永寧</item>

    <item>頂埔</item>

    <item>---------中和新蘆線---------</item>

    <item>迴龍站</item>

    <item>丹鳳站</item>

    <item>輔大站</item>

    <item>新莊站</item>

    <item>頭前庄站</item>

    <item>先嗇宮站</item>

    <item>三重站</item>

    <item>菜寮站</item>

    <item>台北橋站</item>

    <item>大橋頭站</item>

    <item>蘆洲站</item>

    <item>三民高中站</item>

    <item>徐匯中學站</item>

    <item>三和國中站</item>

    <item>三重國小站</item>

    <item>民權西路站</item>

    <item>中山國小站</item>

    <item>行天宮站</item>

    <item>松江南京站</item>

    <item>忠孝新生站</item>

    <item>東門站</item>

    <item>古亭站</item>

    <item>頂溪站</item>

    <item>永安市場站</item>

    <item>景安站</item>

    <item>南勢角站</item>

    <item>---------文湖線---------</item>

    <item>南港展覽館</item>

    <item>南港軟體園區</item>

    <item>東湖</item>

    <item>蘆洲</item>

    <item>大湖公園</item>

    <item>內湖</item>

    <item>文德</item>

    <item>港墘</item>

    <item>西湖</item>

    <item>劍南路</item>

    <item>大直</item>

    <item>松山機場</item>

    <item>中山國中</item>

    <item>南京復興</item>

    <item>忠孝復興</item>

    <item>大安</item>

    <item>科技大樓</item>

    <item>六張犁</item>

    <item>麟光</item>

    <item>辛亥</item>

    <item>萬芳社區</item>

    <item>木柵</item>

    <item>動物園</item>

</string-array>

    <!-- 食物分類 -->
    <string-array name="categories">
        <item>@string/value_any_category</item>
        <item>吃到飽</item>
        <item>米其林/頂級餐廳</item>
        <item>火鍋</item>
        <item>早午餐</item>
        <item>夜市小吃</item>
        <item>燒烤/居酒屋</item>
        <item>鐵板燒</item>
        <item>美式餐廳</item>
        <item>義式料理</item>
        <item>港式茶餐廳</item>
        <item>韓式料理</item>
        <item>日式料理</item>
        <item>中式熱炒</item>
        <item>小吃</item>
        <item>西式/牛排</item>
        <item>主題餐廳</item>
        <item>烘培點心</item>
        <item>甜品/冰飲</item>
    </string-array>

    <!-- 價格篩選器 -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>




</resources>