<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="139dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/logo"
        android:id="@+id/account_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/account_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:textColor="#000000"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/account_layout"
        android:id="@+id/password_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/password_edit"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/password_layout"
        android:id="@+id/name_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name_edit"
            android:hint="@string/name"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_below="@id/name_layout"
        android:text="@string/signUp_button"
        android:id="@+id/signUp_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
</RelativeLayout>